logs/amo-validator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/amo_validator-1.10.75.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cssutils'...
Listing './lib/python3.5/site-packages/cssutils/css'...
Listing './lib/python3.5/site-packages/cssutils/scripts'...
Listing './lib/python3.5/site-packages/cssutils/stylesheets'...
Listing './lib/python3.5/site-packages/cssutils/tests'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/images'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/import'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/import/images2'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/var'...
Listing './lib/python3.5/site-packages/cssutils/tests/test_encutils'...
Listing './lib/python3.5/site-packages/cssutils-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/defusedxml'...
Listing './lib/python3.5/site-packages/defusedxml-0.5.0.dist-info'...
Listing './lib/python3.5/site-packages/encutils'...
Listing './lib/python3.5/site-packages/fastchardet'...
Compiling './lib/python3.5/site-packages/fastchardet/charsetgroupprober.py'...
***   File "./lib/python3.5/site-packages/fastchardet/charsetgroupprober.py", line 44
    prober.active = constants.True
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fastchardet/constants.py'...
***   File "./lib/python3.5/site-packages/fastchardet/constants.py", line 46
    False = __builtin__.False
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fastchardet/universaldetector.py'...
***   File "./lib/python3.5/site-packages/fastchardet/universaldetector.py", line 50
    self.done = constants.False
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fastchardet-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/functional_tests'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/natsort'...
Listing './lib/python3.5/site-packages/natsort/compat'...
Listing './lib/python3.5/site-packages/natsort-5.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pluggy'...
Listing './lib/python3.5/site-packages/pluggy-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pytest-3.3.1.dist-info'...
Listing './lib/python3.5/site-packages/rdflib'...
Listing './lib/python3.5/site-packages/rdflib/plugins'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyMicrodata'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/host'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/rdfs'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/transform'...
Listing './lib/python3.5/site-packages/rdflib/plugins/serializers'...
Listing './lib/python3.5/site-packages/rdflib-3.4.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/spidermonkey'...
Listing './lib/python3.5/site-packages/spidermonkey/lib'...
Listing './lib/python3.5/site-packages/spidermonkey/lib/linux'...
Listing './lib/python3.5/site-packages/spidermonkey/lib/os-x'...
Listing './lib/python3.5/site-packages/spidermonkey-58.0a1.post2.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/validator'...
Compiling './lib/python3.5/site-packages/validator/decorator.py'...
***   File "./lib/python3.5/site-packages/validator/decorator.py", line 57
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/validator/errorbundler.py'...
***   File "./lib/python3.5/site-packages/validator/errorbundler.py", line 216
    print '(Instant error discarded)'
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/validator/main.py'...
***   File "./lib/python3.5/site-packages/validator/main.py", line 102
    print 'Given expectation (%s) not valid. See --help for details' % \
                                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/validator/outputhandlers'...
Listing './lib/python3.5/site-packages/validator/python'...
Listing './lib/python3.5/site-packages/validator/testcases'...
Listing './lib/python3.5/site-packages/validator/testcases/javascript'...
Listing './lib/python3.5/site-packages/validator/testcases/l10n'...
Listing './lib/python3.5/site-packages/validator/testcases/langpacks'...
Listing './lib/python3.5/site-packages/validator/testcases/markup'...
Compiling './lib/python3.5/site-packages/validator/testcases/markup/markuptester.py'...
***   File "./lib/python3.5/site-packages/validator/testcases/markup/markuptester.py", line 127
    print self.xml_state, err
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
